--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@
                     <div class="featured-img">
                         <img src="assets/images/hero-banner.jpg" alt="বাংলা সাহিত্যের বিশেষ বই">
                     </div>
-                    <h3 class="featured-title">এ টেল অভ টু সিটিজ<</h3>
+                    <h3 class="featured-title">এ টেল অভ টু সিটিজ</h3>
                 </div>
             </div>
         </div>
