--- a/index.html
+++ b/index.html
@@ -1246,6 +1246,9 @@
                 font-size: 2.3rem;
                 
             }
+            .logo-text {
+                padding-top: 40px;
+            }
             
             .hero p {
                 font-size: 1.2rem;
