--- a/index.html
+++ b/index.html
@@ -1561,6 +1561,99 @@
                 padding-top: 70px;
             }
         }
+
+/* GOAT Featured Card */
+.goat-card {
+  background: rgba(255, 255, 255, 0.03);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 20px;
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(14px);
+  overflow: hidden;
+  position: relative;
+  transition: transform 0.5s ease, box-shadow 0.5s ease;
+  transform-style: preserve-3d;
+}
+
+.goat-card:hover {
+  transform: scale(1.02) rotateX(1deg) rotateY(-2deg);
+  box-shadow: 0 25px 70px rgba(255, 159, 67, 0.3);
+}
+
+/* Image Zoom on Hover */
+.goat-card-img {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+  border-radius: 15px;
+}
+
+.goat-card-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.6s ease;
+}
+
+.goat-card:hover .goat-card-img img {
+  transform: scale(1.08);
+}
+
+/* Shine overlay */
+.shine-overlay {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -75%;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(120deg, transparent, rgba(255,255,255,0.2), transparent);
+  transform: skewX(-20deg);
+  pointer-events: none;
+  transition: left 0.6s ease;
+}
+
+.goat-card:hover .shine-overlay {
+  left: 125%;
+}
+
+/* Title */
+.goat-title {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-top: 20px;
+  color: var(--primary-light);
+  transition: color 0.4s ease;
+}
+
+.goat-card:hover .goat-title {
+  color: var(--primary);
+}
+
+.goat-card::after {
+  content: '';
+  position: absolute;
+  top: -30%;
+  left: -30%;
+  width: 160%;
+  height: 160%;
+  background: radial-gradient(circle, rgba(255,255,255,0.03) 0%, transparent 70%);
+  transform: rotate(0deg);
+  animation: subtleGlow 8s linear infinite;
+  pointer-events: none;
+  z-index: 0;
+}
+
+@keyframes subtleGlow {
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+  100% {
+    transform: rotate(360deg) scale(1);
+  }
+}
+
+
     </style>
     </head>
     <body>
@@ -1614,13 +1707,15 @@
         </div>
 
         <div class="featured-book animated zoomIn tilt-card" style="animation-delay: 0.8s;">
-        <div class="featured-card">
-            <div class="featured-img">
-            <img src="assets/images/hero-banner.jpg" alt="বাংলা সাহিত্যের বিশেষ বই">
-            </div>
-            <h3 class="featured-title">এ টেল অভ টু সিটিজ</h3>
-        </div>
-        </div>
+  <div class="featured-card goat-card">
+    <div class="featured-img goat-card-img">
+      <img src="assets/images/hero-banner.jpg" alt="বাংলা সাহিত্যের বিশেষ বই">
+      <div class="shine-overlay"></div>
+    </div>
+    <h3 class="featured-title goat-title">এ টেল অভ টু সিটিজ</h3>
+  </div>
+</div>
+
     </div>
     </section>
 
