--- a/index.html
+++ b/index.html
@@ -1690,7 +1690,7 @@
 }
 
 .logo-text span {
-  color: #bd7b26;
+  color: #bd5126;
 }
 
 
@@ -1757,7 +1757,7 @@
     <a href="#" class="logo">
       <img src="assets/images/logo2_transparent.png" alt="লিটভার্স লোগো" class="logo-img">
     </a>
-    <div class="logo-text">লিট<span>ভার্স</span></div>
+    <div class="logo-text">সাহিত্যের <span>বিস্ময়জগৎ</span></div>
     <div class="loader"></div>
   </div>
 </div>
@@ -2031,9 +2031,10 @@
                 <div class="contact-info">
                     <h3>আমাদের সাথে যোগাযোগ</h3>
                     <div class="contact-details">
-                        <p><i class="fas fa-map-marker-alt"></i> ১২/৩ সাহিত্য সরণি, ঢাকা ১২১২</p>
-                        <p><i class="fas fa-phone"></i> +৮৮০ ১৭১২-৩৪৫৬৭৮</p>
-                        <p><i class="fas fa-envelope"></i> info@litverse.com</p>
+                        <p><i class="fas fa-map-marker-alt"></i> ধানমণ্ডি, ঢাকা, বাংলাদেশ</p>
+                        <p><i class="fas fa-phone"></i> +৮৮০ ১৪০৪-৯৯৯১৪৪
+</p>
+                        <p><i class="fas fa-envelope"></i>litversepub@gmail.com</p>
                         <p><i class="fas fa-clock"></i> রবি-বৃহঃ সকাল ১০টা - সন্ধ্যা ৭টা</p>
                     </div>
                     <h3>আমাদের অনুসরণ করুন</h3>
