--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>লিটভার্স | বাংলা সাহিত্যের নিকেতন</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;500;600;700&display=swap" rel="stylesheet">
+   <link rel="icon" href="assets/images/circle.png" type="image/png" sizes="20x10">
+
+
+
     <style>
         :root {
             --primary: #ff9f43;
