--- a/index.html
+++ b/index.html
@@ -1863,7 +1863,7 @@
                     <div class="book-info">
                         <h3>পদ্মা নদীর মাঝি</h3>
                         <span class="book-author">মানিক বন্দ্যোপাধ্যায়</span>
-                        <p>নদী কেন্দ্রিক জীবন ও মানুষের সংগ্রামের এক অনবদ্য চিত্রায়ন।</p>
+                        <p>নদী কেন্দ্রিক জীবন ও মানুষের সংগ্রামের এক অনবদ্য।</p>
                     </div>
                 </div>
                 
