--- a/index.html
+++ b/index.html
@@ -1835,19 +1835,19 @@
             <div class="books-grid">
                 <div class="book-card">
   <div class="book-img">
-    <img src="assets/images/book1.jpg" alt="পথের পাঁচালী বই" />
+    <img src="assets/images/book1.jpg" alt="জ্ঞানচক্র নতুন দিগন্তের সন্ধানে বই" />
   </div>
   <div class="book-info">
-    <h3>পথের পাঁচালী</h3>
-    <span class="book-author">বিভূতিভূষণ বন্দ্যোপাধ্যায়</span>
-    <p>বাংলা সাহিত্যের এক অবিস্মরণীয় উপন্যাস যা গ্রাম বাংলার জীবনচিত্র ফুটিয়ে তুলেছে।</p>
+    <h3>জ্ঞানচক্র নতুন দিগন্তের সন্ধানে</h3>
+    <span class="book-author">মাজহারুল চৌধুরী</span>
+    <p>বাংলা সাহিত্যের এক অবিস্মরণীয় উপন্যাস যা জটিল ও সরল জীবনচিত্র ফুটিয়ে তুলেছে।</p>
   </div>
 </div>
 
                 
                 <div class="book-card">
                       <div class="book-img">
-    <img src="assets/images/book2.jpg" alt="পথের পাঁচালী বই" />
+    <img src="assets/images/book2.jpg" alt="জ্ঞানচক্র নতুন দিগন্তের সন্ধানে" />
   </div>
                     <div class="book-info">
                         <h3>দেবদাস</h3>
