--- a/index.html
+++ b/index.html
@@ -1858,7 +1858,7 @@
                 
                 <div class="book-card">
                     <div class="book-img">
-    <img src="assets/images/book3.jpg" alt="পথের পাঁচালী বই" />
+    <img src="assets/images/book3.jpg" alt="জ্ঞানচক্র নতুন দিগন্তের সন্ধানে" />
   </div>
                     <div class="book-info">
                         <h3>পদ্মা নদীর মাঝি</h3>
