--- a/index.html
+++ b/index.html
@@ -1850,9 +1850,9 @@
     <img src="assets/images/book2.jpg" alt="জ্ঞানচক্র নতুন দিগন্তের সন্ধানে" />
   </div>
                     <div class="book-info">
-                        <h3>দেবদাস</h3>
-                        <span class="book-author">শরৎচন্দ্র চট্টোপাধ্যায়</span>
-                        <p>এক ট্র্যাজিক প্রেমের গল্প যা বাংলা সাহিত্যে চিরস্মরণীয় হয়ে আছে।</p>
+                        <h3>এক শহর মেঘের নিচে</h3>
+                        <span class="book-author">আবির ইসলাম</span>
+                        <p>"এক শহর মেঘের নিচে" আবির ইসলামের লেখা এক নরম, আবেগঘন গল্প—যেখানে শহর, ভালোবাসা আর স্মৃতিরা মেঘ হয়ে মিশে যায়। ভাষা সহজ, কিন্তু অনুভব গভীর।</p>
                     </div>
                 </div>
                 
@@ -1861,9 +1861,9 @@
     <img src="assets/images/book3.jpg" alt="জ্ঞানচক্র নতুন দিগন্তের সন্ধানে" />
   </div>
                     <div class="book-info">
-                        <h3>পদ্মা নদীর মাঝি</h3>
-                        <span class="book-author">মানিক বন্দ্যোপাধ্যায়</span>
-                        <p>নদী কেন্দ্রিক জীবন ও মানুষের সংগ্রামের এক অনবদ্য।</p>
+                        <h3>গোধূলির দ্বিতীয় দরজা</h3>
+                        <span class="book-author">ফজলুল হক</span>
+                        <p>"গোধূলির দ্বিতীয় দরজা" ফজলুল হকের লেখা এক মননশীল ও দর্শনঘেঁষা উপন্যাস, যেখানে গোধূলির আলো-ছায়ায় জীবন আর সময়ের দরজাগুলো ধীরে ধীরে খুলে যায়। পাঠক যেন নিজেকেই খুঁজে ফেরে প্রতিটি পৃষ্ঠায়।</p>
                     </div>
                 </div>
                 
