--- a/index.html
+++ b/index.html
@@ -1869,22 +1869,22 @@
                 
                 <div class="book-card">
                     <div class="book-img">
-    <img src="assets/images/book4.jpg" alt="পথের পাঁচালী বই" />
+    <img src="assets/images/book4.jpg" alt="রোবট এবং নিখোঁজ শহর" />
   </div>
                     <div class="book-info">
-                        <h3>হাজার বছর ধরে</h3>
-                        <span class="book-author">জহির রায়হান</span>
-                        <p>বাংলাদেশের গ্রামীণ সমাজ ও নারীর জীবনের এক মর্মস্পর্শী উপাখ্যান।</p>
+                        <h3>রোবট এবং নিখোঁজ শহর</h3>
+                        <span class="book-author">নিয়ন রহমান</span>
+                        <p>"রোবট এবং নিখোঁজ শহর" নিয়ন রহমানের রচনায় বিজ্ঞানের সাথে রোমাঞ্চের এক দুর্দান্ত মিশ্রণ—যেখানে ভবিষ্যতের রোবট আর অতীতের হারিয়ে যাওয়া শহরের গল্পে মিশে যায় কল্পনা, রহস্য আর প্রযুক্তির ছোঁয়া।</p>
                     </div>
                 </div>
                 <div class="book-card">
                     <div class="book-img">
-    <img src="assets/images/hero-banner.jpg" alt="পথের পাঁচালী বই" />
+    <img src="assets/images/hero-banner.jpg" alt="এ টেল অভ টু সিটিস" />
   </div>
                     <div class="book-info">
-                        <h3>হাজার বছর ধরে</h3>
-                        <span class="book-author">জহির রায়হান</span>
-                        <p>বাংলাদেশের গ্রামীণ সমাজ ও নারীর জীবনের এক মর্মস্পর্শী উপাখ্যান।</p>
+                        <h3>এ টেল অভ টু সিটিস</h3>
+                        <span class="book-author">চার্লস ডিকেন্স</span>
+                        <p>চার্লস ডিকেন্সের কালজয়ী উপন্যাস, যেখানে বিপ্লবের গর্জন, ভালোবাসার আত্মত্যাগ আর দুই শহরের (লন্ডন ও প্যারিস) নিয়তির জটিলতা একসাথে মিশেছে। লিটভার্স টিমের অনুবাদে এই ধ্রুপদী গল্পটি পেয়েছে বাংলা ভাষায় নতুন প্রাণ।</p>
                     </div>
                     
                 </div>
