--- a/index.html
+++ b/index.html
@@ -1936,8 +1936,8 @@
                 <div class="author-card">
                     <div class="author-img">👤</div>
                     <div class="author-info">
-                        <h3>বেগম রোকেয়া</h3>
-                        <p>বাংলার নারী জাগরণের অগ্রদূত, যিনি তার লেখনীর মাধ্যমে নারী শিক্ষার পথ সুগম করেছেন।</p>
+                        <h3>লিটভার্স টিম</h3>
+                        <p>বাংলা সাহিত্যের জনপ্রিয় অনুবাদ দল, যারা আন্তর্জাতিক সাহিত্যকর্মগুলোকে বাংলায় অনুবাদ করে পাঠকের কাছে পৌঁছে দেয়। ক্লাসিক থেকে আধুনিক, বিভিন্ন ধারার সাহিত্যকে সহজ ও সাবলীল ভাষায় উপস্থাপন করে তারা বাংলা পাঠকদের বিশ্বসাহিত্যের দরজা খুলে দেয়।</p>
                     </div>
                 </div>
             </div>
