--- a/index.html
+++ b/index.html
@@ -1801,10 +1801,10 @@
     <div class="featured-book animated zoomIn tilt-card" style="animation-delay: 0.8s;">
       <div class="featured-card goat-card">
         <div class="featured-img goat-card-img">
-          <img src="assets/images/hero-banner.jpg" alt="বাংলা সাহিত্যের বিশেষ বই">
+          <img src="assets/images/Sherlock 1.png" alt="বাংলা সাহিত্যের বিশেষ বই">
           <div class="shine-overlay"></div>
         </div>
-        <h3 class="featured-title goat-title">এ টেল অভ টু সিটিজ</h3>
+        <h3 class="featured-title goat-title">শার্লক হোমস অমনিবাস</h3>
       </div>
     </div>
   </div>
