--- a/index.html
+++ b/index.html
@@ -1793,8 +1793,8 @@
   <div class="container hero-content">
     <div class="hero-text animated fadeInUp" style="animation-delay: 0.2s;">
       <div class="logo-text">লিট<span>ভার্স</span></div>
-      <h1 class="animated-glow">বাংলা সাহিত্যের এক অনন্য অভিযাত্রা</h1>
-      <p style="animation-delay: 0.4s;">লিটভার্সে স্বাগতম - যেখানে শব্দের সৌন্দর্য ও গল্পের জাদু একাকার</p>
+      <h1 class="animated-glow">বইয়ের বিস্ময়জগৎ</h1>
+      <p style="animation-delay: 0.4s;">বাংলা সাহিত্যের নতুন দিগন্ত উন্মোচনের লক্ষ্যে যাত্রা শুরু করেছে লিটভার্স পাবলিশার্স — যেখানে কল্পনা, বাস্তবতা, ভালোবাসা ও জ্ঞানের গল্পেরা মুদ্রিত হয় আপন মহিমায়। নতুন ও অভিজ্ঞ লেখকদের জন্য একটি নির্ভরযোগ্য, উদ্ভাবনী প্রকাশনা প্রতিষ্ঠান।</p>
       <a href="#books" class="btn" style="animation-delay: 0.6s;">আমাদের বইগুলো দেখুন</a>
     </div>
 
