--- a/index.html
+++ b/index.html
@@ -1958,12 +1958,19 @@
     <section id="literature" class="literature-section">
         <div class="container">
             <div class="section-title">
-                <h2>বাংলা সাহিত্য</h2>
+                <h2>বাংলা সাহিত্যের ভবিষ্যৎদূত: লিটভার্স</h2>
             </div>
             <div class="literature-content">
-                <p>বাংলা সাহিত্যের ইতিহাস হাজার বছরের পুরনো। চর্যাপদ থেকে শুরু করে আধুনিক সাহিত্য পর্যন্ত বাংলা সাহিত্যে রয়েছে সমৃদ্ধ ঐতিহ্য ও বৈচিত্র্য। লিটভার্স এই সমৃদ্ধ সাহিত্য ভাণ্ডারকে পাঠকের দোরগোড়ায় পৌঁছে দেওয়ার জন্য কাজ করে যাচ্ছে।</p>
+                <p>বাংলা সাহিত্য শুধু ভাষা নয়—এটি আমাদের সংস্কৃতি, ইতিহাস, এবং আত্মার প্রতিচ্ছবি। চর্যাপদের প্রাচীন রূপক থেকে শুরু করে বঙ্কিম, রবীন্দ্র, শরৎচন্দ্রের বাস্তবতানির্ভর কাহিনি, নজরুলের বিদ্রোহ, জীবনানন্দের কাব্যিক নিঃসঙ্গতা কিংবা হুমায়ূনের আধুনিক ন্যারেটিভ—এই দীর্ঘ সাহিত্যের ধারা আমাদের করে তুলেছে গল্পপ্রেমী এক জাতি।
+
+এই গৌরবময় উত্তরাধিকার নিয়েই পথচলা শুরু করেছে লিটভার্স পাবলিশার্স—বাংলা সাহিত্যের নতুন সম্ভাবনার একটি আধুনিক, উদ্ভাবনী প্রকাশনা প্রতিষ্ঠান। আমরা বিশ্বাস করি, সাহিত্যের প্রকৃত শক্তি প্রকাশ পায় তখনই, যখন তা উচ্চমানের গল্প, মেধাসম্পন্ন লেখক এবং পেশাদার উপস্থাপনার মাধ্যমে পাঠকের হৃদয়ে পৌঁছায়।</p>
                 
-                <p>আমরা বিশ্বাস করি সাহিত্য মানুষের চিন্তার খোরাক জোগায়, মননকে সমৃদ্ধ করে এবং সমাজকে এগিয়ে নিয়ে যায়। তাই আমরা নির্বাচিত সাহিত্যকর্ম, নতুন লেখকদের রচনা এবং সাহিত্য আলোচনাকে গুরুত্ব সহকারে প্রকাশ করে থাকি। আমাদের লক্ষ্য বাংলা সাহিত্যের প্রসার এবং নতুন প্রজন্মের মধ্যে সাহিত্য পাঠের আগ্রহ সৃষ্টি করা।</p>
+                <p>লিটভার্স প্রতিশ্রুতি দেয়—
+সাহিত্যিক উৎকর্ষতা: আমরা প্রকাশ করবো এমন সাহিত্য, যা পাঠকের চিন্তাজগতে আলোড়ন তোলে। শক্তিশালী কাহিনি, গভীর চরিত্র এবং অর্থবহ বার্তা—এই আমাদের মানদণ্ড।
+কালজয়ী ক্লাসিক ও সাহিত্যের ঐতিহ্য: বিশ্বসাহিত্যের বাছাই করা ক্লাসিক এবং বাংলা সাহিত্যের অমূল্য রত্নগুলোকে আধুনিক পাঠকের জন্য নতুন করে উপস্থাপন করা হবে উন্নত অনুবাদ ও সম্পাদনার মাধ্যমে।
+দৃশ্যগত গল্পভাষা: সাহিত্যে ভিজুয়াল ন্যারেটিভ (visual storytelling) যুক্ত করে আমরা নিয়ে আসছি নতুন অভিজ্ঞতা—যেখানে গল্প শুধু পড়া নয়, অনুভব করা যায়।
+নতুন ও প্রতিভাবান লেখকদের প্ল্যাটফর্ম: নবীন কণ্ঠগুলোকে তুলে ধরাই আমাদের অন্যতম অঙ্গীকার। সাহিত্যপ্রেমী নতুন প্রজন্মের লেখকদের জন্য লিটভার্স হবে এক বিশ্বাসযোগ্য আশ্রয়।
+উন্নত প্রকাশনার মান: প্রতিটি বই হবে পাঠযোগ্যতার দিক থেকে নির্ভুল, দৃষ্টিনন্দন প্রচ্ছদ, মানসম্মত কাগজ ও মুদ্রণে তৈরি—যা সংগ্রহযোগ্য।</p>
                 
                 <p>লিটভার্সে আপনি পাবেন বাংলা সাহিত্যের ক্লাসিক থেকে শুরু করে সমসাময়িক লেখকদের রচনা। আমাদের সংগ্রহে রয়েছে কবিতা, উপন্যাস, ছোটগল্প, প্রবন্ধ, নাটকসহ সাহিত্যের সকল শাখার সেরা রচনাসমূহ।</p>
             </div>
