--- a/index.html
+++ b/index.html
@@ -1839,7 +1839,7 @@
                     <div class="book-info">
                         <h3>এক শহর মেঘের নিচে</h3>
                         <span class="book-author">আবির ইসলাম</span>
-                        <p>"এক শহর মেঘের নিচে" আবির ইসলামের লেখা এক নরম, আবেগঘন গল্প—যেখানে শহর, ভালোবাসা আর স্মৃতিরা মেঘ হয়ে মিশে যায়। ভাষা সহজ, কিন্তু অনুভব গভীর।</p>
+                        <p>এক শহর মেঘের নিচে" আবির ইসলামের লেখা এক নরম, আবেগঘন গল্প—যেখানে শহর, ভালোবাসা আর স্মৃতিরা মেঘ হয়ে মিশে যায়। ভাষা সহজ, কিন্তু অনুভব গভীর।</p>
                     </div>
                 </div>
                 
@@ -1850,7 +1850,7 @@
                     <div class="book-info">
                         <h3>গোধূলির দ্বিতীয় দরজা</h3>
                         <span class="book-author">ফজলুল হক</span>
-                        <p>"গোধূলির দ্বিতীয় দরজা" ফজলুল হকের লেখা এক মননশীল ও দর্শনঘেঁষা উপন্যাস, যেখানে গোধূলির আলো-ছায়ায় জীবন আর সময়ের দরজাগুলো ধীরে ধীরে খুলে যায়। পাঠক যেন নিজেকেই খুঁজে ফেরে প্রতিটি পৃষ্ঠায়।</p>
+                        <p>গোধূলির দ্বিতীয় দরজা" ফজলুল হকের লেখা এক মননশীল ও দর্শনঘেঁষা উপন্যাস, যেখানে গোধূলির আলো-ছায়ায় জীবন আর সময়ের দরজাগুলো ধীরে ধীরে খুলে যায়। পাঠক যেন নিজেকেই খুঁজে ফেরে প্রতিটি পৃষ্ঠায়।</p>
                     </div>
                 </div>
                 
@@ -1861,7 +1861,7 @@
                     <div class="book-info">
                         <h3>রোবট এবং নিখোঁজ শহর</h3>
                         <span class="book-author">নিয়ন রহমান</span>
-                        <p>"রোবট এবং নিখোঁজ শহর" নিয়ন রহমানের রচনায় বিজ্ঞানের সাথে রোমাঞ্চের এক দুর্দান্ত মিশ্রণ—যেখানে ভবিষ্যতের রোবট আর অতীতের হারিয়ে যাওয়া শহরের গল্পে মিশে যায় কল্পনা, রহস্য আর প্রযুক্তির ছোঁয়া।</p>
+                        <p>রোবট এবং নিখোঁজ শহর" নিয়ন রহমানের রচনায় বিজ্ঞানের সাথে রোমাঞ্চের এক দুর্দান্ত মিশ্রণ—যেখানে ভবিষ্যতের রোবট আর অতীতের হারিয়ে যাওয়া শহরের গল্পে মিশে যায় কল্পনা, রহস্য আর প্রযুক্তির ছোঁয়া।</p>
                     </div>
                 </div>
                 <div class="book-card">
