--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html lang="bn">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H3Q3N64M2S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H3Q3N64M2S');
+</script>
+
+
+
+
+
+
+
+
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
