--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="bn">
-<!-- Google tag (gtag.js) -->
+
+  <!-- SEO-->
+
+
+  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H3Q3N64M2S"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -14,10 +18,10 @@
 
 
 
+  
+  <!-- SEO-->
 
-
-
-    
+  
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
